<resources>
    <!--app specific strings-->
    <string name="app_name">Nurse Log Application</string>

    <!--menu specific strings-->
    <string name="main_page_options_text">Main Nav Page</string>
    <string name="login_page_option_text">Login</string>
    <string name="patients_page_option_text">Patients</string>
    <string name="tests_page_option_text">Tests</string>
    <string name="view_tests_info_page_option_text">View Tests</string>
    <string name="update_patient_page_option_text">Update Patient Info</string>

    <!--main specific strings-->
    <string name="app_logo_text">Cartoon stethoscope image</string>
    <string name="to_login_page_btn_text">Go to login</string>

    <!--login specific strings-->
    <string name="login_page_title">NURSE LOGIN</string>
    <string name="login_btn_text">Login</string>
    <string name="logout_btn_text">Logout</string>
    <string name="login_username_hint">Enter your username</string>
    <string name="login_password_hint">Enter your password</string>

    <!--patient and update info specific strings-->
    <string name="patient_title">PATIENT</string>
    <string name="enter_patient_title">Enter a new patient:</string>
    <string name="patient_result_text_prompt">Patient Result:</string>
    <string name="patient_firstname_hint">Enter the patient firstname</string>
    <string name="patient_lastname_hint">Enter the patient lastname</string>
    <string name="patient_department_hint">Enter the patient department</string>
    <!--<string name="patient_nurse_id_hint">Enter the ID for the patient nurse</string>-->
    <string name="patient_room_hint">Enter the room for the patient</string>

    <!--test page specific strings-->
    <string name="test_page_title">TEST</string>
    <string name="test_id_hint">Enter the test ID</string>
    <string name="test_patient_id_hint">Patient for the test (patient ID)</string>
    <string name="test_nurse_id_hint">Nurse assigned (nurse ID)</string>
    <string name="patient_bpl_hint">Patient BPL (top_val.bottom_val format)</string>
    <string name="patient_bph_hint">Patient BPH (true or false)</string>
    <string name="patient_temp_hint">Patient temperature (Celsius)</string>
    <string name="patient_blood_type_hint">Patient blood type</string>
    <string name="patient_blood_sugar_level_hint">Patient blood sugar level (mg/dL)</string>

    <!--multi-use strings-->
    <string name="patient_id_hint">Enter the patient ID</string>
    <string name="submit_btn_text">Submit</string>
    <string name="enter_data_btn_text">Enter Data</string>
    <string name="search_btn_text">Search</string>
    <string name="login_button_content_description">Login button with a key image</string>


    <!--view test info specific strings-->
    <string name="view_test_info_title_text">VIEW TEST INFO</string>
    <string name="search_patient_tests_title">Search for patient specific tests:</string>
    <string name="search_patient_tests_results_title">Test Results:</string>

    <!--update info specific strings-->
    <string name="update_info_title">UPDATE PATIENT INFO</string>
    <string name="find_patient_title">Find the patient to update:</string>
    <string name="patient_found_title">Patient you want to update:</string>
    <string name="update_patient_title">Update patient info:</string>
    <string name="update_patient_id_hint">Patient ID</string>
    <string name="update_patient_firstname_hint">Update the patient firstname</string>
    <string name="update_patient_lastname_hint">Update the patient lastname</string>
    <string name="update_patient_department_hint">Update the patient department</string>
    <string name="update_patient_nurse_id_hint">Update the ID for the patient nurse</string>
    <string name="update_patient_room_hint">Update the room for the patient</string>
    <string name="patient_id_warning">*Patient ID must not change*</string>
    <string name="update_btn_text">Update</string>
</resources>