<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/activity_frame_layout_margin"
    android:background="@drawable/content_frame_border"
    tools:context=".LoginActivity">

    <!--Title for the login activity-->
    <TextView
        android:id="@+id/login_title"
        style="@style/title_text"
        android:text="@string/login_page_title"
        android:background="@drawable/title_border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--Edit text for the nurse to enter their username-->
    <EditText
        android:id="@+id/nurse_username_entry"
        style="@style/center_edit_text"
        android:layout_height="48dp"
        android:layout_marginTop="56dp"
        android:autofillHints="enter your username"
        android:hint="@string/login_username_hint"
        android:inputType="numberPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/edit_text_border"
        app:layout_constraintTop_toBottomOf="@+id/login_title" />

    <!--Edit text for the nurse password-->
    <EditText
        android:id="@+id/nurse_password_entry"
        style="@style/center_edit_text"
        android:layout_height="48dp"
        android:autofillHints="enter your password"
        android:hint="@string/login_password_hint"
        android:inputType="textPassword"
        android:textColor="@color/dark_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/edit_text_border"
        app:layout_constraintTop_toBottomOf="@+id/nurse_username_entry" />

    <!--Button to to login as a nurse-->
    <Button
        android:id="@+id/login_btn"
        style="@style/regular_button"
        android:text="@string/login_btn_text"
        app:layout_constraintBottom_toTopOf="@+id/logout_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!--Button to to logout of nurse account-->
    <Button
        android:id="@+id/logout_btn"
        style="@style/regular_button"
        android:text="@string/logout_btn_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>