<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Patient">

    <TextView
        android:id="@+id/patient_title"
        style="@style/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/patient_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/search_patient_title"
        style="@style/sub_title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:text="@string/search_patient_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/patient_title" />

    <EditText
        android:id="@+id/patient_id_search"
        style="@style/edit_text"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="16dp"
        android:autofillHints="enter the patient's ID"
        android:hint="@string/patient_id_hint"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_patient_title" />

    <Button
        android:id="@+id/search_patient_btn"
        style="@style/regular_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="56dp"
        android:text="@string/search_btn_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_patient_title" />

    <TextView
        android:id="@+id/enter_patient_title"
        style="@style/sub_title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:text="@string/enter_patient_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/patient_result" />

    <TextView
        android:id="@+id/patient_result_title"
        style="@style/regular_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/patient_result_text_prompt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/patient_id_search" />

    <TextView
        android:id="@+id/patient_result"
        style="@style/regular_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/patient_result_title" />


    <EditText
        android:id="@+id/patient_id_entry"
        style="@style/edit_text"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="16dp"
        android:autofillHints="enter the patient's id"
        android:hint="@string/patient_id_hint"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enter_patient_title" />

    <EditText
        android:id="@+id/patient_firstname_entry"
        style="@style/edit_text"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="6dp"
        android:autofillHints="enter the patient's firstname"
        android:hint="@string/patient_firstname_hint"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/patient_id_entry" />

    <EditText
        android:id="@+id/patient_lastname_entry"
        style="@style/edit_text"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="6dp"
        android:autofillHints="enter the patient's lastname"
        android:hint="@string/patient_lastname_hint"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/patient_firstname_entry" />

    <EditText
        android:id="@+id/patient_department_entry"
        style="@style/edit_text"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="6dp"
        android:autofillHints="enter the patient's department"
        android:hint="@string/patient_department_hint"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/patient_lastname_entry" />

    <EditText
        android:id="@+id/patient_nurse_id"
        style="@style/edit_text"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="6dp"
        android:autofillHints="enter the ID for the patient's nurse"
        android:hint="@string/patient_nurse_id_hint"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/patient_department_entry" />
    <EditText
        android:id="@+id/patient_room_entry"
        style="@style/edit_text"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="26dp"
        android:autofillHints="enter the room number of the patient"
        android:hint="@string/patient_room_hint"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/patient_room_entry" />

    <Button
        android:id="@+id/submit_btn"
        style="@style/regular_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit_btn_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>